// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Skills/> Snapshot renders without crashing using mount 1`] = `
<Skills>
  <styled.section
    id="skills"
  >
    <section
      className="sc-hBMUJo cKqHaH"
      id="skills"
    >
      <h2>
        button.skills
      </h2>
      <styled.div>
        <div
          className="sc-fnVZcZ lcwwGy"
        >
          <ProgressIndicator
            description="skills.software_engineering"
            percentage={99}
          >
            <styled.div>
              <div
                className="sc-dIsUp kRpPEh"
              >
                <styled.div>
                  <div
                    className="sc-bqGGPW jUrrst"
                  >
                    <styled.div
                      percentage={99}
                    >
                      <div
                        className="sc-ksluID fMRnJV"
                      />
                    </styled.div>
                  </div>
                </styled.div>
                <div>
                  skills.software_engineering
                </div>
              </div>
            </styled.div>
          </ProgressIndicator>
          <ProgressIndicator
            description="skills.front (skills.react)"
            percentage={90}
          >
            <styled.div>
              <div
                className="sc-dIsUp kRpPEh"
              >
                <styled.div>
                  <div
                    className="sc-bqGGPW jUrrst"
                  >
                    <styled.div
                      percentage={90}
                    >
                      <div
                        className="sc-ksluID gQyraI"
                      />
                    </styled.div>
                  </div>
                </styled.div>
                <div>
                  skills.front (skills.react)
                </div>
              </div>
            </styled.div>
          </ProgressIndicator>
          <ProgressIndicator
            description="skills.back (skills.node, skills.dotnet)"
            percentage={50}
          >
            <styled.div>
              <div
                className="sc-dIsUp kRpPEh"
              >
                <styled.div>
                  <div
                    className="sc-bqGGPW jUrrst"
                  >
                    <styled.div
                      percentage={50}
                    >
                      <div
                        className="sc-ksluID gSttvk"
                      />
                    </styled.div>
                  </div>
                </styled.div>
                <div>
                  skills.back (skills.node, skills.dotnet)
                </div>
              </div>
            </styled.div>
          </ProgressIndicator>
          <ProgressIndicator
            description="skills.db"
            percentage={25}
          >
            <styled.div>
              <div
                className="sc-dIsUp kRpPEh"
              >
                <styled.div>
                  <div
                    className="sc-bqGGPW jUrrst"
                  >
                    <styled.div
                      percentage={25}
                    >
                      <div
                        className="sc-ksluID gXCOhW"
                      />
                    </styled.div>
                  </div>
                </styled.div>
                <div>
                  skills.db
                </div>
              </div>
            </styled.div>
          </ProgressIndicator>
          <ProgressIndicator
            description="skills.devops"
            percentage={50}
          >
            <styled.div>
              <div
                className="sc-dIsUp kRpPEh"
              >
                <styled.div>
                  <div
                    className="sc-bqGGPW jUrrst"
                  >
                    <styled.div
                      percentage={50}
                    >
                      <div
                        className="sc-ksluID gSttvk"
                      />
                    </styled.div>
                  </div>
                </styled.div>
                <div>
                  skills.devops
                </div>
              </div>
            </styled.div>
          </ProgressIndicator>
          <ProgressIndicator
            description="skills.automated_tests"
            percentage={90}
          >
            <styled.div>
              <div
                className="sc-dIsUp kRpPEh"
              >
                <styled.div>
                  <div
                    className="sc-bqGGPW jUrrst"
                  >
                    <styled.div
                      percentage={90}
                    >
                      <div
                        className="sc-ksluID gQyraI"
                      />
                    </styled.div>
                  </div>
                </styled.div>
                <div>
                  skills.automated_tests
                </div>
              </div>
            </styled.div>
          </ProgressIndicator>
        </div>
      </styled.div>
    </section>
  </styled.section>
</Skills>
`;

exports[`<Skills/> Snapshot renders without crashing using render 1`] = `
<section
  class="sc-hBMUJo cKqHaH"
  id="skills"
>
  <h2>
    button.skills
  </h2>
  <div
    class="sc-fnVZcZ lcwwGy"
  >
    <div
      class="sc-dIsUp kRpPEh"
    >
      <div
        class="sc-bqGGPW jUrrst"
      >
        <div
          class="sc-ksluID fMRnJV"
        />
      </div>
      <div>
        skills.software_engineering
      </div>
    </div>
    <div
      class="sc-dIsUp kRpPEh"
    >
      <div
        class="sc-bqGGPW jUrrst"
      >
        <div
          class="sc-ksluID gQyraI"
        />
      </div>
      <div>
        skills.front (skills.react)
      </div>
    </div>
    <div
      class="sc-dIsUp kRpPEh"
    >
      <div
        class="sc-bqGGPW jUrrst"
      >
        <div
          class="sc-ksluID gSttvk"
        />
      </div>
      <div>
        skills.back (skills.node, skills.dotnet)
      </div>
    </div>
    <div
      class="sc-dIsUp kRpPEh"
    >
      <div
        class="sc-bqGGPW jUrrst"
      >
        <div
          class="sc-ksluID gXCOhW"
        />
      </div>
      <div>
        skills.db
      </div>
    </div>
    <div
      class="sc-dIsUp kRpPEh"
    >
      <div
        class="sc-bqGGPW jUrrst"
      >
        <div
          class="sc-ksluID gSttvk"
        />
      </div>
      <div>
        skills.devops
      </div>
    </div>
    <div
      class="sc-dIsUp kRpPEh"
    >
      <div
        class="sc-bqGGPW jUrrst"
      >
        <div
          class="sc-ksluID gQyraI"
        />
      </div>
      <div>
        skills.automated_tests
      </div>
    </div>
  </div>
</section>
`;

exports[`<Skills/> Snapshot renders without crashing using shallow 1`] = `
<styled.section
  id="skills"
>
  <h2>
    button.skills
  </h2>
  <styled.div>
    <ProgressIndicator
      description="skills.software_engineering"
      percentage={99}
    />
    <ProgressIndicator
      description="skills.front (skills.react)"
      percentage={90}
    />
    <ProgressIndicator
      description="skills.back (skills.node, skills.dotnet)"
      percentage={50}
    />
    <ProgressIndicator
      description="skills.db"
      percentage={25}
    />
    <ProgressIndicator
      description="skills.devops"
      percentage={50}
    />
    <ProgressIndicator
      description="skills.automated_tests"
      percentage={90}
    />
  </styled.div>
</styled.section>
`;
